task4-rest: add discoveries API
